fix gap

--- a/index.css
+++ b/index.css
@@ -47,6 +47,7 @@ ul
 
 ul li
 {
+    max-width: 500px;
     line-height: 2rem;
 }
 
